--- a/versuch.ipynb
+++ b/versuch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 84,
    "outputs": [
     {
      "name": "stderr",
@@ -36,7 +36,8 @@
     "from sklearn import metrics\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.metrics import multilabel_confusion_matrix\n",
-    "from sklearn.neural_network import MLPClassifier\n"
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -321,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 78,
    "outputs": [],
    "source": [
     "def TfIdf_data_from_df(df_input):\n",
@@ -336,7 +337,7 @@
     "   # __________________________________________________________________________________________________________\n",
     "\n",
     "   # vectorizing test and train data with Tfidf\n",
-    "    polarity_tfidf_vectorizer = TfidfVectorizer(ngram_range=(1, 1), stop_words=\"english\")\n",
+    "    polarity_tfidf_vectorizer = TfidfVectorizer(ngram_range=(1, 2))\n",
     "    polarity_bow_matrix_train = polarity_tfidf_vectorizer.fit_transform(data_train)\n",
     "    polarity_bow_matrix_test = polarity_tfidf_vectorizer.transform(data_test)\n",
     "\n",
@@ -352,9 +353,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 79,
    "outputs": [],
-   "source": [],
+   "source": [
+    "data_train, data_test, label_train, label_test = TfIdf_data_from_df(df)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -364,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 85,
    "outputs": [
     {
      "name": "stdout",
@@ -373,29 +376,31 @@
       "\n",
       "Evaluate MLPClassifier:\n",
       "\n",
-      "Accuracy: 0.285\n",
+      "Accuracy: 0.330\n",
       "\n",
       "Confusion Matrix: \n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/dmitry/PycharmProjects/nlp-project/venv/lib/python3.8/site-packages/sklearn/neural_network/_multilayer_perceptron.py:709: UserWarning: Training interrupted by user.\n",
-      "  warnings.warn(\"Training interrupted by user.\")\n"
-     ]
-    },
-    {
      "data": {
-      "text/plain": "array([[[11966,     0],\n        [   34,     0]],\n\n       [[11950,     0],\n        [   50,     0]],\n\n       [[11737,     0],\n        [  263,     0]],\n\n       [[11788,     0],\n        [  212,     0]],\n\n       [[11471,     0],\n        [  529,     0]],\n\n       [[10338,    71],\n        [ 1535,    56]],\n\n       [[11605,     0],\n        [  395,     0]],\n\n       [[10774,   138],\n        [  905,   183]],\n\n       [[ 6272,  3106],\n        [ 1337,  1285]],\n\n       [[11511,     0],\n        [  489,     0]],\n\n       [[10384,     0],\n        [ 1616,     0]],\n\n       [[11372,     0],\n        [  628,     0]],\n\n       [[ 4253,  5264],\n        [  586,  1897]]])"
+      "text/plain": "array([[[11966,     0],\n        [   34,     0]],\n\n       [[11946,     4],\n        [   50,     0]],\n\n       [[11704,    33],\n        [  261,     2]],\n\n       [[11775,    13],\n        [  212,     0]],\n\n       [[11390,    81],\n        [  513,    16]],\n\n       [[ 9408,  1001],\n        [ 1109,   482]],\n\n       [[11519,    86],\n        [  341,    54]],\n\n       [[10323,   589],\n        [  684,   404]],\n\n       [[ 6056,  3322],\n        [ 1055,  1567]],\n\n       [[11442,    69],\n        [  471,    18]],\n\n       [[ 9867,   517],\n        [ 1292,   324]],\n\n       [[11250,   122],\n        [  600,    28]],\n\n       [[ 7316,  2201],\n        [ 1416,  1067]]])"
      },
-     "execution_count": 77,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [],
+   "source": [
+    "forest_classifier = RandomForestClassifier()\n",
+    "forest_classifier.fit(data_train, label_train)\n",
+    "test_forest= forest_classifier.predict(data_test)\n",
+    "\n",
+    "#evaluationg model and reporting accuracy and multi-class confusion matrix\n",
+    "print('\\nEvaluate MLPClassifier:')\n",
+    "print('\\nAccuracy: %.3f' % metrics.accuracy_score(label_test, test_forest))\n",
+    "print('\\nConfusion Matrix: ')\n",
+    "multilabel_confusion_matrix(label_test, test_forest)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
