--- a/versuch.ipynb
+++ b/versuch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 86,
    "outputs": [
     {
      "name": "stderr",
@@ -24,6 +24,7 @@
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "nltk.download('stopwords')\n",
+    "from nltk.stem import PorterStemmer\n",
     "\n",
     "import re\n",
     "\n",
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 100,
    "outputs": [
     {
      "name": "stdout",
@@ -62,6 +63,7 @@
     }
    ],
    "source": [
+    "#binary\n",
     "data = []\n",
     "with open('tweet_emotions.csv', mode ='r')as file:\n",
     "    readed = csv.reader(file)\n",
@@ -97,6 +99,40 @@
     "\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'C2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [103]\u001B[0m, in \u001B[0;36m<cell line: 3>\u001B[0;34m()\u001B[0m\n\u001B[1;32m      1\u001B[0m df_neg \u001B[38;5;241m=\u001B[39m pd\u001B[38;5;241m.\u001B[39mread_csv(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mnegative.csv\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m      2\u001B[0m df_pos \u001B[38;5;241m=\u001B[39m pd\u001B[38;5;241m.\u001B[39mread_csv(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mpositive.csv\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m----> 3\u001B[0m \u001B[43mdf_pos\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mC2\u001B[49m\n",
+      "File \u001B[0;32m~/PycharmProjects/nlp-project/venv/lib/python3.8/site-packages/pandas/core/generic.py:5575\u001B[0m, in \u001B[0;36mNDFrame.__getattr__\u001B[0;34m(self, name)\u001B[0m\n\u001B[1;32m   5568\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m (\n\u001B[1;32m   5569\u001B[0m     name \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_internal_names_set\n\u001B[1;32m   5570\u001B[0m     \u001B[38;5;129;01mand\u001B[39;00m name \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_metadata\n\u001B[1;32m   5571\u001B[0m     \u001B[38;5;129;01mand\u001B[39;00m name \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_accessors\n\u001B[1;32m   5572\u001B[0m     \u001B[38;5;129;01mand\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_info_axis\u001B[38;5;241m.\u001B[39m_can_hold_identifiers_and_holds_name(name)\n\u001B[1;32m   5573\u001B[0m ):\n\u001B[1;32m   5574\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m[name]\n\u001B[0;32m-> 5575\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mobject\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[38;5;21;43m__getattribute__\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mname\u001B[49m\u001B[43m)\u001B[49m\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'DataFrame' object has no attribute 'C2'"
+     ]
+    }
+   ],
+   "source": [
+    "df_neg = pd.read_csv('negative.csv')\n",
+    "df_pos = pd.read_csv('positive.csv')\n",
+    "\n",
+    "\n",
     "\n"
    ],
    "metadata": {
@@ -120,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 87,
    "outputs": [],
    "source": [
     "\n",
@@ -171,6 +207,13 @@
     "    line_text_without_hashtags = line_text.replace('#','')\n",
     "    return line_text_without_hashtags\n",
     "\n",
+    "ps = nltk.PorterStemmer()\n",
+    "def stemming(line_text):\n",
+    "    text_list = [ps.stem(word) for word in line_text.split()]\n",
+    "    final_string = ' '.join(text_list)\n",
+    "    return final_string\n",
+    "\n",
+    "\n",
     "def clean_line(line_text):\n",
     "    text_zero = remove_username(line_text)\n",
     "    text_one = remove_url(text_zero)\n",
@@ -178,7 +221,8 @@
     "    text_three = remove_hashtags(text_two)\n",
     "    text_four = remove_numbers(text_three)\n",
     "    text_five = remove_stopwords(text_four)\n",
-    "    text_final = translate_abbreviations(text_five)\n",
+    "    text_six = translate_abbreviations(text_five)\n",
+    "    text_final = stemming(text_six)\n",
     "    return text_final\n",
     "\n"
    ],
@@ -203,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 88,
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"tweet_emotions.csv\")\n",
@@ -230,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 89,
    "outputs": [],
    "source": [
     "df.to_csv('tweet_emotions_cleaned.csv')"
@@ -244,14 +288,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 90,
    "outputs": [
     {
      "data": {
-      "text/plain": "         tweet_id   sentiment  \\\n0      1956967341       empty   \n1      1956967666     sadness   \n2      1956967696     sadness   \n3      1956967789  enthusiasm   \n4      1956968416     neutral   \n...           ...         ...   \n39995  1753918954     neutral   \n39996  1753919001        love   \n39997  1753919005        love   \n39998  1753919043   happiness   \n39999  1753919049        love   \n\n                                                 content  \\\n0      @tiffanylue i know  i was listenin to bad habi...   \n1      Layin n bed with a headache  ughhhh...waitin o...   \n2                    Funeral ceremony...gloomy friday...   \n3                   wants to hang out with friends SOON!   \n4      @dannycastillo We want to trade with someone w...   \n...                                                  ...   \n39995                                   @JohnLloydTaylor   \n39996                     Happy Mothers Day  All my love   \n39997  Happy Mother's Day to all the mommies out ther...   \n39998  @niariley WASSUP BEAUTIFUL!!! FOLLOW ME!!  PEE...   \n39999  @mopedronin bullet train from tokyo    the gf ...   \n\n                                         cleaned_content  \n0      know listenin bad habit earlier started freaki...  \n1                 Layin n bed headache ughhhhwaitin call  \n2                          Funeral ceremonygloomy friday  \n3                                wants hang friends SOON  \n4              We want trade someone Houston tickets one  \n...                                                  ...  \n39995                                                     \n39996                         Happy Mothers Day All love  \n39997  Happy Mothers Day mommies woman man long youre...  \n39998  WASSUP BEAUTIFUL FOLLOW ME PEEP OUT MY NEW HIT...  \n39999  bullet train tokyo gf visiting japan since thu...  \n\n[40000 rows x 4 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>tweet_id</th>\n      <th>sentiment</th>\n      <th>content</th>\n      <th>cleaned_content</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1956967341</td>\n      <td>empty</td>\n      <td>@tiffanylue i know  i was listenin to bad habi...</td>\n      <td>know listenin bad habit earlier started freaki...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1956967666</td>\n      <td>sadness</td>\n      <td>Layin n bed with a headache  ughhhh...waitin o...</td>\n      <td>Layin n bed headache ughhhhwaitin call</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1956967696</td>\n      <td>sadness</td>\n      <td>Funeral ceremony...gloomy friday...</td>\n      <td>Funeral ceremonygloomy friday</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1956967789</td>\n      <td>enthusiasm</td>\n      <td>wants to hang out with friends SOON!</td>\n      <td>wants hang friends SOON</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1956968416</td>\n      <td>neutral</td>\n      <td>@dannycastillo We want to trade with someone w...</td>\n      <td>We want trade someone Houston tickets one</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>39995</th>\n      <td>1753918954</td>\n      <td>neutral</td>\n      <td>@JohnLloydTaylor</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>39996</th>\n      <td>1753919001</td>\n      <td>love</td>\n      <td>Happy Mothers Day  All my love</td>\n      <td>Happy Mothers Day All love</td>\n    </tr>\n    <tr>\n      <th>39997</th>\n      <td>1753919005</td>\n      <td>love</td>\n      <td>Happy Mother's Day to all the mommies out ther...</td>\n      <td>Happy Mothers Day mommies woman man long youre...</td>\n    </tr>\n    <tr>\n      <th>39998</th>\n      <td>1753919043</td>\n      <td>happiness</td>\n      <td>@niariley WASSUP BEAUTIFUL!!! FOLLOW ME!!  PEE...</td>\n      <td>WASSUP BEAUTIFUL FOLLOW ME PEEP OUT MY NEW HIT...</td>\n    </tr>\n    <tr>\n      <th>39999</th>\n      <td>1753919049</td>\n      <td>love</td>\n      <td>@mopedronin bullet train from tokyo    the gf ...</td>\n      <td>bullet train tokyo gf visiting japan since thu...</td>\n    </tr>\n  </tbody>\n</table>\n<p>40000 rows × 4 columns</p>\n</div>"
+      "text/plain": "         tweet_id   sentiment  \\\n0      1956967341       empty   \n1      1956967666     sadness   \n2      1956967696     sadness   \n3      1956967789  enthusiasm   \n4      1956968416     neutral   \n...           ...         ...   \n39995  1753918954     neutral   \n39996  1753919001        love   \n39997  1753919005        love   \n39998  1753919043   happiness   \n39999  1753919049        love   \n\n                                                 content  \\\n0      @tiffanylue i know  i was listenin to bad habi...   \n1      Layin n bed with a headache  ughhhh...waitin o...   \n2                    Funeral ceremony...gloomy friday...   \n3                   wants to hang out with friends SOON!   \n4      @dannycastillo We want to trade with someone w...   \n...                                                  ...   \n39995                                   @JohnLloydTaylor   \n39996                     Happy Mothers Day  All my love   \n39997  Happy Mother's Day to all the mommies out ther...   \n39998  @niariley WASSUP BEAUTIFUL!!! FOLLOW ME!!  PEE...   \n39999  @mopedronin bullet train from tokyo    the gf ...   \n\n                                         cleaned_content  \n0      know listenin bad habit earlier start freakin ...  \n1                  layin n bed headach ughhhhwaitin call  \n2                            funer ceremonygloomi friday  \n3                                  want hang friend soon  \n4                we want trade someon houston ticket one  \n...                                                  ...  \n39995                                                     \n39996                          happi mother day all love  \n39997  happi mother day mommi woman man long your mom...  \n39998  wassup beauti follow me peep out my new hit si...  \n39999  bullet train tokyo gf visit japan sinc thursda...  \n\n[40000 rows x 4 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>tweet_id</th>\n      <th>sentiment</th>\n      <th>content</th>\n      <th>cleaned_content</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1956967341</td>\n      <td>empty</td>\n      <td>@tiffanylue i know  i was listenin to bad habi...</td>\n      <td>know listenin bad habit earlier start freakin ...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1956967666</td>\n      <td>sadness</td>\n      <td>Layin n bed with a headache  ughhhh...waitin o...</td>\n      <td>layin n bed headach ughhhhwaitin call</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1956967696</td>\n      <td>sadness</td>\n      <td>Funeral ceremony...gloomy friday...</td>\n      <td>funer ceremonygloomi friday</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1956967789</td>\n      <td>enthusiasm</td>\n      <td>wants to hang out with friends SOON!</td>\n      <td>want hang friend soon</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1956968416</td>\n      <td>neutral</td>\n      <td>@dannycastillo We want to trade with someone w...</td>\n      <td>we want trade someon houston ticket one</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>39995</th>\n      <td>1753918954</td>\n      <td>neutral</td>\n      <td>@JohnLloydTaylor</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>39996</th>\n      <td>1753919001</td>\n      <td>love</td>\n      <td>Happy Mothers Day  All my love</td>\n      <td>happi mother day all love</td>\n    </tr>\n    <tr>\n      <th>39997</th>\n      <td>1753919005</td>\n      <td>love</td>\n      <td>Happy Mother's Day to all the mommies out ther...</td>\n      <td>happi mother day mommi woman man long your mom...</td>\n    </tr>\n    <tr>\n      <th>39998</th>\n      <td>1753919043</td>\n      <td>happiness</td>\n      <td>@niariley WASSUP BEAUTIFUL!!! FOLLOW ME!!  PEE...</td>\n      <td>wassup beauti follow me peep out my new hit si...</td>\n    </tr>\n    <tr>\n      <th>39999</th>\n      <td>1753919049</td>\n      <td>love</td>\n      <td>@mopedronin bullet train from tokyo    the gf ...</td>\n      <td>bullet train tokyo gf visit japan sinc thursda...</td>\n    </tr>\n  </tbody>\n</table>\n<p>40000 rows × 4 columns</p>\n</div>"
      },
-     "execution_count": 73,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,10 +324,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 91,
    "outputs": [],
    "source": [
-    "\n",
     "def SpacyVec_data_from_df(df_input):\n",
     "    df = df_input\n",
     "    df['text_tokenized'] = df.clened_content.apply(lambda x: nlp_lg(x)) # tokenizing every text in the dataframe\n",
@@ -322,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 95,
    "outputs": [],
    "source": [
     "def TfIdf_data_from_df(df_input):\n",
@@ -331,9 +374,7 @@
     "    df['Numeric_Labels'] = df.sentiment.cat.codes # saving category codes of column labels to new column\n",
     "\n",
     "    # splitting data _________________COULD BE CHANGED____________________________________________________\n",
-    "    data_train, data_test, label_train, label_test = train_test_split(df.cleaned_content, df.Numeric_Labels,\n",
-    "                                                                 test_size=0.30,\n",
-    "                                                                 random_state=101, shuffle=True)\n",
+    "    data_train, data_test, label_train, label_test = train_test_split(df.cleaned_content, df.Numeric_Labels, test_size=0.30, random_state=101, shuffle=True)\n",
     "   # __________________________________________________________________________________________________________\n",
     "\n",
     "   # vectorizing test and train data with Tfidf\n",
@@ -353,10 +394,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 96,
    "outputs": [],
    "source": [
     "data_train, data_test, label_train, label_test = TfIdf_data_from_df(df)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "outputs": [],
+   "source": [
+    "forest_classifier = RandomForestClassifier()"
    ],
    "metadata": {
     "collapsed": false,
