normal and cleaned datasets

--- a/TrainingAndMetrics.ipynb
+++ b/TrainingAndMetrics.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "ba7deb1f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -40,7 +44,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "3145c4c9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def calc_metrics(classifiers, X, y):\n",
@@ -79,7 +87,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "99076224",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def plot_learning_curve(classifiers, X, y, ylim=None, cv=None, n_jobs=None, \n",
@@ -137,7 +149,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "633a19c7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def get_binary_df():\n",
@@ -154,7 +170,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "ab3ff7f9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def get_spacy_embedding(df, X_train, X_test):\n",
@@ -168,7 +188,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "cc538711",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def train_models(df, vectorizer, text=\"text\", labels=\"emotion\"):\n",
@@ -197,7 +221,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "2f764539",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def remove_empty_rows(df, text=\"cleaned_content\", labels=\"new_sentiment\"):\n",
@@ -213,7 +241,10 @@
    "execution_count": 12,
    "id": "d0b1f14b",
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -320,7 +351,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "ab4659a8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -420,7 +455,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5d534145",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
