normal and cleaned datasets

--- a/versuch.ipynb
+++ b/versuch.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "\n",
@@ -236,11 +236,11 @@
     "    return final_string\n",
     "\n",
     "def clean_line(line_text):\n",
-    "    text_zero = remove_username(line_text)\n",
-    "    text_one = remove_url(text_zero)\n",
-    "    text_two = remove_punctuation(text_one)\n",
-    "    text_three = remove_hashtags(text_two)\n",
-    "    text_four = remove_numbers(text_three)\n",
+    "    text_zero = remove_hashtags(line_text)\n",
+    "    text_one = remove_username(text_zero)\n",
+    "    text_two = remove_url(text_one)\n",
+    "    text_three = remove_punctuation(text_two)\n",
+    "    text_four = remove_hashtags(text_three)\n",
     "    text_five = remove_stopwords(text_four)\n",
     "    text_six = translate_abbreviations(text_five)\n",
     "    text_final = lemmatizing(text_six)\n",
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "df_multiple = pd.read_csv(\"tweet_emotions.csv\")\n",
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "df_multiple['cleaned_content'] = df_multiple.content.apply(clean_line)\n",
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "df_binary.to_csv('tweet_emotions_binary_cleaned.csv')\n",
