normal and cleaned datasets

--- a/versuch.ipynb
+++ b/versuch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stderr",
@@ -21,6 +21,7 @@
     "import string\n",
     "import pandas as pd\n",
     "import re\n",
+    "from string import digits\n",
     "\n",
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
@@ -179,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "\n",
@@ -189,8 +190,8 @@
     "\n",
     "\n",
     "def remove_numbers(line_text):\n",
-    "    dict_table = str.maketrans('', '', string.digits)\n",
-    "    line_text_without_nums = line_text.translate(dict_table)\n",
+    "    table = str.maketrans('', '', digits)\n",
+    "    line_text_without_nums = line_text.translate(table)\n",
     "    return line_text_without_nums\n",
     "\n",
     "def remove_url(line_text):\n",
@@ -236,7 +237,7 @@
     "    return final_string\n",
     "\n",
     "def clean_line(line_text):\n",
-    "    text_zero = remove_hashtags(line_text)\n",
+    "    text_zero = remove_numbers(line_text)\n",
     "    text_one = remove_username(text_zero)\n",
     "    text_two = remove_url(text_one)\n",
     "    text_three = remove_punctuation(text_two)\n",
@@ -268,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "df_multiple = pd.read_csv(\"tweet_emotions.csv\")\n",
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "df_multiple['cleaned_content'] = df_multiple.content.apply(clean_line)\n",
@@ -312,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "df_binary.to_csv('tweet_emotions_binary_cleaned.csv')\n",
@@ -536,7 +537,28 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "def train_models(df, vectorizer, text=\"text\", labels=\"emotion\"):\n",
+    "    classifiers = [svm.LinearSVC(), RandomForestClassifier()] #DecisionTreeClassifier()]# # MLPClassifier()]\n",
+    "\n",
+    "    #look into learning curves (do we have enough samples?) / validation curves (is the model under/overfitting?)\n",
+    "\n",
+    "    X = vect.transform(df[text])\n",
+    "    y = df[labels]\n",
+    "\n",
+    "    print(\"Amount of features: \", len(vect.get_feature_names_out()))\n",
+    "    print(\"Features: \", vect.get_feature_names_out())\n",
+    "\n",
+    "    cv = ShuffleSplit(n_splits=5, test_size=0.2, random_state=0)\n",
+    "    plot_learning_curve(classifiers, X, y, ylim=(0.5, 1.01), cv=cv, n_jobs=4)\n",
+    "\n",
+    "    results = calc_metrics(classifiers, X, y)\n",
+    "\n",
+    "    df_results = pd.DataFrame(results)\n",
+    "    return df_results\n",
+    "\n",
+    "    plt.show("
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
