normal and cleaned datasets

--- a/versuch.ipynb
+++ b/versuch.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "\n",
@@ -245,7 +245,7 @@
     "    text_five = remove_stopwords(text_four)\n",
     "    text_six = translate_abbreviations(text_five)\n",
     "    text_final = lemmatizing(text_six)\n",
-    "    return text_final\n",
+    "    return text_final.lower()\n",
     "\n"
    ],
    "metadata": {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "df_multiple = pd.read_csv(\"tweet_emotions.csv\")\n",
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "df_multiple['cleaned_content'] = df_multiple.content.apply(clean_line)\n",
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "outputs": [],
    "source": [
     "df_binary.to_csv('tweet_emotions_binary_cleaned.csv')\n",
